--- a/Directory/www/templates/index.html
+++ b/Directory/www/templates/index.html
@@ -1,13 +1,22 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
   <head>
     <title>A SimpleDjangoApp</title>
+    <link rel="stylesheet" href="{% static 'normalize.css' %}"></link>
+    <link rel="stylesheet" href="{% static 'main.css' %}"></link>
   </head>
   <body>
+    <main>
     <h1>The app</h1>
     {% for person in people %}
-      <p>{{person.name}} - {{person.title}} - {{person.email}}</p>
-      <img src={{person.image}} width="200"/>
+    <section>
+      <h2>{{person.name}}</h2>
+      <p class="person-title">{{person.title}}</p>
+      <p class="person-email">{{person.email}}</p>
+      <img src={{person.image}} width="250"/>
+    </section>
     {% endfor %}
+    </main>
   </body>
 </html>
